Updated project files and added documentation

--- a/experiment/mcqgen.ipynb
+++ b/experiment/mcqgen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting langchain-groq\n",
-      "  Using cached langchain_groq-0.1.10-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: langchain-groq in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (0.1.10)\n",
       "Requirement already satisfied: groq<1,>=0.4.1 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from langchain-groq) (0.11.0)\n",
       "Requirement already satisfied: langchain-core<0.3.0,>=0.2.39 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from langchain-groq) (0.2.40)\n",
       "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from groq<1,>=0.4.1->langchain-groq) (4.4.0)\n",
@@ -44,10 +43,7 @@
       "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from pydantic<3,>=1.9.0->groq<1,>=0.4.1->langchain-groq) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.23.4 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from pydantic<3,>=1.9.0->groq<1,>=0.4.1->langchain-groq) (2.23.4)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from requests<3,>=2->langsmith<0.2.0,>=0.1.112->langchain-core<0.3.0,>=0.2.39->langchain-groq) (3.3.2)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from requests<3,>=2->langsmith<0.2.0,>=0.1.112->langchain-core<0.3.0,>=0.2.39->langchain-groq) (2.2.3)\n",
-      "Using cached langchain_groq-0.1.10-py3-none-any.whl (14 kB)\n",
-      "Installing collected packages: langchain-groq\n",
-      "Successfully installed langchain-groq-0.1.10\n"
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\hp\\onedrive - abes\\desktop\\mcq_project\\env\\lib\\site-packages (from requests<3,>=2->langsmith<0.2.0,>=0.1.112->langchain-core<0.3.0,>=0.2.39->langchain-groq) (2.2.3)\n"
      ]
     }
    ],
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
